# doc-to-md

./: .gitignore  README.md  debug_env.py  debug_headings.py  pyproject.toml  requirements.txt  test_heading_fixer.py  verify_regex.py
.github/workflows/: python-package.yml
doc_to_md/: __init__.py  cli.py  pipeline.py
doc_to_md.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
doc_to_md/post_processing/: __init__.py  heading_fixer.py  link_fixer.py  markdown_cleanup.py  metadata_enricher.py  segmenter.py  table_merger.py  whitespace_normalizer.py
doc_to_md/processing/: __init__.py  converter_interface.py  pymupdf_converter.py
output/: dell-poweredge-r760-installation-and-service-manual.md  idrac9-user-guide.md  idrac9-user-s-guide-1.md  idrac9-user-s-guide.md
tests/: test_cleanup.py  test_heading_fixer.py  test_pipeline.py
